<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.coode</groupId>
  <artifactId>ontology-browser</artifactId>
  <packaging>war</packaging>
  <version>3.x.branch</version>
  <name>Ontology Browser</name>
  <url>https://github.com/nickdrummond/ontology-browser</url>

  <properties>
    <java.version>1.17</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <owlapi.version>5.1.20</owlapi.version>
    <jfact.version>5.0.3</jfact.version>
    <spring.version>5.3.20</spring.version>
    <gaphu.version>0.0.9</gaphu.version>
    <suggestor.version>1.0.0</suggestor.version>
    <thymeleaf.version>2.1.4.RELEASE</thymeleaf.version>
    <servlet.version>4.0.1</servlet.version>

    <slf4j.version>1.7.12</slf4j.version>
    <logback.version>1.2.0</logback.version>

    <junit.version>4.13.1</junit.version>
    <hamcrest.version>2.0.0.0</hamcrest.version>
    <mockito.version>4.9.0</mockito.version>

    <jetty.version>10.0.14</jetty.version>

    <compiler-plugin.version>2.5.1</compiler-plugin.version>
    <cargo-plugin.version>1.4.10</cargo-plugin.version>
    <dependency-plugin.version>2.3</dependency-plugin.version>
  </properties>

  <repositories>
    <repository>
      <id>project.local</id>
      <name>project</name>
      <url>file:${project.basedir}/repo</url>
    </repository>
  </repositories>

  <dependencies>

    <!-- Spring dependencies -->
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-core</artifactId>
      <version>${spring.version}</version>
      <exclusions>
        <exclusion>
          <groupId>commons-logging</groupId>
          <artifactId>commons-logging</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-web</artifactId>
      <version>${spring.version}</version>
    </dependency>

    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-webmvc</artifactId>
      <version>${spring.version}</version>
    </dependency>

    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>javax.servlet-api</artifactId>
      <version>${servlet.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-collections4</artifactId>
      <version>4.1</version>
    </dependency>

    <dependency>
      <groupId>org.apache.lucene</groupId>
      <artifactId>lucene-core</artifactId>
      <version>9.9.1</version>
    </dependency>

    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>${logback.version}</version>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>jcl-over-slf4j</artifactId>
      <version>${slf4j.version}</version>
    </dependency>

    <dependency>
      <groupId>uk.co.nickdrummond</groupId>
      <artifactId>gaphu</artifactId>
      <version>${gaphu.version}</version>
    </dependency>

    <dependency>
      <groupId>org.coode</groupId>
      <artifactId>suggestor</artifactId>
      <version>${suggestor.version}</version>
    </dependency>

    <dependency>
      <groupId>net.sourceforge.owlapi</groupId>
      <artifactId>owlapi-apibinding</artifactId>
      <version>${owlapi.version}</version>
    </dependency>

    <dependency>
      <groupId>net.sourceforge.owlapi</groupId>
      <artifactId>owlapi-impl</artifactId>
      <version>${owlapi.version}</version>
    </dependency>

    <dependency>
      <groupId>net.sourceforge.owlapi</groupId>
      <artifactId>owlapi-parsers</artifactId>
      <version>${owlapi.version}</version>
    </dependency>

    <dependency>
      <groupId>net.sourceforge.owlapi</groupId>
      <artifactId>jfact</artifactId>
      <version>${jfact.version}</version>
      <exclusions>
        <exclusion>
          <groupId>net.sourceforge.owlapi</groupId>
          <artifactId>owlapi-distribution</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>com.github.galigator.openllet</groupId>
      <artifactId>openllet-owlapi</artifactId>
      <version>2.6.5</version>
    </dependency>

    <dependency>
      <groupId>org.thymeleaf</groupId>
      <artifactId>thymeleaf-spring4</artifactId>
      <version>${thymeleaf.version}</version>
    </dependency>

    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-test</artifactId>
      <version>${spring.version}</version>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest-junit</artifactId>
      <version>${hamcrest.version}</version>
    </dependency>

    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>4.4.0</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.glassfish.jaxb</groupId>
      <artifactId>jaxb-runtime</artifactId>
      <version>2.3.6</version>
    </dependency>

  </dependencies>

  <build>
    <finalName>ontology-browser</finalName>

    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
        <includes>
          <include>**/*.xml</include>
          <include>**/*.properties</include>
        </includes>
      </resource>
      <resource>
        <directory>src/test/resources</directory>
        <filtering>true</filtering>
        <includes>
          <include>example.owl</include>
        </includes>
      </resource>
    </resources>

    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.0</version>
        <configuration>
          <source>17</source>
          <target>17</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>3.3.2</version>
      </plugin>


      <!-- Good to run locally for dev -->
      <plugin>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-maven-plugin</artifactId>
        <version>10.0.8</version>
        <configuration>
          <stopKey>STOP</stopKey>
          <stopPort>9999</stopPort>
<!--          <scanIntervalSeconds>5</scanIntervalSeconds>-->
        </configuration>
      </plugin>

      <!-- Required for heroku deployment -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>${dependency-plugin.version}</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals><goal>copy</goal></goals>
            <configuration>
              <artifactItems>
                <artifactItem>
                  <groupId>org.eclipse.jetty</groupId>
                  <artifactId>jetty-runner</artifactId>
                  <version>${jetty.version}</version>
                  <destFileName>jetty-runner.jar</destFileName>
                </artifactItem>
              </artifactItems>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>
